--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,28 @@
     font-weight: bold;
 }
 
+.menu {
+    margin-top: 60px;
+}
+
 .menu li {
     cursor: hand;
     cursor: pointer;
     font-size: 1.2em;
     list-style-type: none;
     margin-left: -40px;
+    margin-bottom: 10px;
 }
 
 .kitten-container img {
-    max-width: 600px;
+    max-width: 100%;
+    max-height: 500px;
+}
+
+#show-panel {
+    margin: 20px 0 20px 0;
+}
+
+#save {
+    margin-left: 20px;
 }
